# python_labs

./: README.md  README_01.md  README_03.md  README_total.md  pyproject.toml
data/lab09/: students.csv
data/samples/: cities.csv  cities.txt  input.txt  people.csv  people.json
src/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py
src/lab02/: 01_arrays.py  02_matrix.py  03_tuples.py  README_02.md
src/lab03/: README_03.md  text_stats.py
src/lab04/: README_04.md  text_report.py
src/lab05/: README_05.md  csv_to_json.py  csv_to_xlsx.py  json_to_csv.py
src/lab06/: cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  models.py  serialize.py
src/lab09/: README.md  group.py
src/lab10/: README.md  linked__list.py
src/lib/: 01_text.py  io_txt_csv.py  matrix.py  text.py
src/tests/: test_json_csv.py  test_text.py
