[project]
name = "python_labs"
version = "1.0.0"

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    venv
    |\.venv
    |data
    |images
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["venv", ".venv", "data", "images"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["ES01"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"